Update regression tables

--- a/notebooks/produce_regressions.ipynb
+++ b/notebooks/produce_regressions.ipynb
@@ -109,9 +109,9 @@
     "        \"median_household_income\": \"Median Household Income\",\n",
     "        \"gini_index\": \"Gini Index\",\n",
     "        \"educational_attainment\": \"Educational Attainment\",\n",
-    "        \"employment_status\": \"Employment Status\",\n",
+    "        \"employment_status\": \"Share Employed\",\n",
     "        \"housing_tenure\": \"Housing Tenure\",\n",
-    "        \"poverty_status\": \"Poverty Status\",\n",
+    "        \"poverty_status\": \"Share in Poverty\",\n",
     "        \"commute_time\": \"Commute Time\",\n",
     "        \"without_health_insurance\": \"Without Health Insurance\",\n",
     "        \"white\": \"Share of White Population\",\n",
@@ -174,7 +174,7 @@
        "      <th>Median Household Income</th>\n",
        "      <th>Gini Index</th>\n",
        "      <th>Educational Attainment</th>\n",
-       "      <th>Employment Status</th>\n",
+       "      <th>Share Employed</th>\n",
        "      <th>...</th>\n",
        "      <th>Share of Hispanic/Latino Population</th>\n",
        "      <th>Population Density</th>\n",
@@ -336,12 +336,12 @@
        "3                   4.8708      0.4339                0.121503   \n",
        "4                   5.0110      0.4564                0.087353   \n",
        "\n",
-       "   Employment Status  ...  Share of Hispanic/Latino Population  \\\n",
-       "0           0.455980  ...                             0.020089   \n",
-       "1           0.442195  ...                             0.008757   \n",
-       "2           0.498758  ...                             0.020672   \n",
-       "3           0.485145  ...                             0.013468   \n",
-       "4           0.438879  ...                             0.005249   \n",
+       "   Share Employed  ...  Share of Hispanic/Latino Population  \\\n",
+       "0        0.455980  ...                             0.020089   \n",
+       "1        0.442195  ...                             0.008757   \n",
+       "2        0.498758  ...                             0.020672   \n",
+       "3        0.485145  ...                             0.013468   \n",
+       "4        0.438879  ...                             0.005249   \n",
        "\n",
        "   Population Density  Share of White Population State  \\\n",
        "0            0.000218                         0.000377   \n",
@@ -470,9 +470,9 @@
     "# Third set of covariates will include the second set plus age, population density, and unemployment rate\n",
     "third_set = second_set + [\n",
     "    \"Gini Index\",\n",
-    "    \"Employment Status\",\n",
+    "    \"Share Employed\",\n",
     "    \"Housing Tenure\",\n",
-    "    \"Poverty Status\",\n",
+    "    \"Share in Poverty\",\n",
     "    \"Commute Time\",\n",
     "    \"Without Health Insurance\",\n",
     "]\n",
@@ -671,7 +671,7 @@
        "      <td>(0.177)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Employment Status</th>\n",
+       "      <th>Share Employed</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>0.311**</td>\n",
@@ -699,7 +699,7 @@
        "      <td>(0.077)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Poverty Status</th>\n",
+       "      <th>Share in Poverty</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>-0.243*</td>\n",
@@ -818,11 +818,11 @@
        "                                                                (0.107)   \n",
        "Gini Index                                                                \n",
        "                                                                          \n",
-       "Employment Status                                                         \n",
+       "Share Employed                                                            \n",
        "                                                                          \n",
        "Housing Tenure                                                            \n",
        "                                                                          \n",
-       "Poverty Status                                                            \n",
+       "Share in Poverty                                                          \n",
        "                                                                          \n",
        "Commute Time                                                              \n",
        "                                                                          \n",
@@ -854,11 +854,11 @@
        "                                                     (0.136)    (0.142)  \n",
        "Gini Index                                             0.151      0.151  \n",
        "                                                     (0.177)    (0.177)  \n",
-       "Employment Status                                    0.311**    0.309**  \n",
+       "Share Employed                                       0.311**    0.309**  \n",
        "                                                     (0.129)    (0.130)  \n",
        "Housing Tenure                                     -0.321***  -0.320***  \n",
        "                                                     (0.076)    (0.077)  \n",
-       "Poverty Status                                       -0.243*    -0.246*  \n",
+       "Share in Poverty                                     -0.243*    -0.246*  \n",
        "                                                     (0.145)    (0.146)  \n",
        "Commute Time                                           0.139      0.141  \n",
        "                                                     (0.183)    (0.183)  \n",
@@ -890,9 +890,9 @@
     "    \"Median Household Income\",\n",
     "    \"Educational Attainment\",\n",
     "    \"Gini Index\",\n",
-    "    \"Employment Status\",\n",
+    "    \"Share Employed\",\n",
     "    \"Housing Tenure\",\n",
-    "    \"Poverty Status\",\n",
+    "    \"Share in Poverty\",\n",
     "    \"Commute Time\",\n",
     "    \"Without Health Insurance\",\n",
     "    \"Population Density\",\n",
@@ -945,6 +945,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_df_ordered.to_csv('../data/any_regression.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -953,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1148,7 @@
        "      <td>(0.061)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Employment Status</th>\n",
+       "      <th>Share Employed</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>-0.147***</td>\n",
@@ -1167,7 +1176,7 @@
        "      <td>(0.027)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Poverty Status</th>\n",
+       "      <th>Share in Poverty</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>-0.220***</td>\n",
@@ -1286,11 +1295,11 @@
        "                                                               (0.038)   \n",
        "Gini Index                                                               \n",
        "                                                                         \n",
-       "Employment Status                                                        \n",
+       "Share Employed                                                           \n",
        "                                                                         \n",
        "Housing Tenure                                                           \n",
        "                                                                         \n",
-       "Poverty Status                                                           \n",
+       "Share in Poverty                                                         \n",
        "                                                                         \n",
        "Commute Time                                                             \n",
        "                                                                         \n",
@@ -1322,11 +1331,11 @@
        "                                                     (0.048)    (0.049)  \n",
        "Gini Index                                             0.058      0.064  \n",
        "                                                     (0.062)    (0.061)  \n",
-       "Employment Status                                  -0.147***  -0.184***  \n",
+       "Share Employed                                     -0.147***  -0.184***  \n",
        "                                                     (0.045)    (0.045)  \n",
        "Housing Tenure                                     -0.149***  -0.123***  \n",
        "                                                     (0.027)    (0.027)  \n",
-       "Poverty Status                                     -0.220***  -0.265***  \n",
+       "Share in Poverty                                   -0.220***  -0.265***  \n",
        "                                                     (0.051)    (0.051)  \n",
        "Commute Time                                          0.110*    0.132**  \n",
        "                                                     (0.064)    (0.063)  \n",
@@ -1342,7 +1351,7 @@
        "RMSE                                                0.094873   0.092863  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,9 +1367,9 @@
     "    \"Median Household Income\",\n",
     "    \"Educational Attainment\",\n",
     "    \"Gini Index\",\n",
-    "    \"Employment Status\",\n",
+    "    \"Share Employed\",\n",
     "    \"Housing Tenure\",\n",
-    "    \"Poverty Status\",\n",
+    "    \"Share in Poverty\",\n",
     "    \"Commute Time\",\n",
     "    \"Without Health Insurance\",\n",
     "    \"Population Density\",\n",
@@ -1413,6 +1422,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_df_ordered.to_csv('../data/hr_regression.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1421,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1625,7 @@
        "      <td>(26.256)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Employment Status</th>\n",
+       "      <th>Share Employed</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>-23.821</td>\n",
@@ -1635,7 +1653,7 @@
        "      <td>(11.400)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Poverty Status</th>\n",
+       "      <th>Share in Poverty</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>-235.371***</td>\n",
@@ -1754,11 +1772,11 @@
        "                                                                  (16.480)   \n",
        "Gini Index                                                                   \n",
        "                                                                             \n",
-       "Employment Status                                                            \n",
+       "Share Employed                                                               \n",
        "                                                                             \n",
        "Housing Tenure                                                               \n",
        "                                                                             \n",
-       "Poverty Status                                                               \n",
+       "Share in Poverty                                                             \n",
        "                                                                             \n",
        "Commute Time                                                                 \n",
        "                                                                             \n",
@@ -1790,11 +1808,11 @@
        "                                                      (20.189)     (21.014)  \n",
        "Gini Index                                             -18.574      -17.409  \n",
        "                                                      (26.342)     (26.256)  \n",
-       "Employment Status                                      -23.821      -31.485  \n",
+       "Share Employed                                         -23.821      -31.485  \n",
        "                                                      (19.152)     (19.243)  \n",
        "Housing Tenure                                      -54.927***   -49.508***  \n",
        "                                                      (11.307)     (11.400)  \n",
-       "Poverty Status                                     -235.371***  -244.771***  \n",
+       "Share in Poverty                                   -235.371***  -244.771***  \n",
        "                                                      (21.538)     (21.673)  \n",
        "Commute Time                                           -14.390       -9.785  \n",
        "                                                      (27.275)     (27.223)  \n",
@@ -1810,7 +1828,7 @@
        "RMSE                                                 40.791577    40.590866  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,9 +1844,9 @@
     "    \"Median Household Income\",\n",
     "    \"Educational Attainment\",\n",
     "    \"Gini Index\",\n",
-    "    \"Employment Status\",\n",
+    "    \"Share Employed\",\n",
     "    \"Housing Tenure\",\n",
-    "    \"Poverty Status\",\n",
+    "    \"Share in Poverty\",\n",
     "    \"Commute Time\",\n",
     "    \"Without Health Insurance\",\n",
     "    \"Population Density\",\n",
@@ -1882,7 +1900,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_df_ordered.to_csv('../data/cost_regression.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
