--- a/notebooks/produce_regressions.ipynb
+++ b/notebooks/produce_regressions.ipynb
@@ -950,7 +950,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_df_ordered.to_csv(\"../data/any_regression.csv\", index=False)"
+    "summary_df_ordered.to_csv(\"../data/any_regression.csv\")"
    ]
   },
   {
@@ -1427,7 +1427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_df_ordered.to_csv(\"../data/hr_regression.csv\", index=False)"
+    "summary_df_ordered.to_csv(\"../data/hr_regression.csv\")"
    ]
   },
   {
@@ -1904,7 +1904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_df_ordered.to_csv(\"../data/cost_regression.csv\", index=False)"
+    "summary_df_ordered.to_csv(\"../data/cost_regression.csv\")"
    ]
   },
   {
