--- a/notebooks/produce_stats2.ipynb
+++ b/notebooks/produce_stats2.ipynb
@@ -532,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_statistics_df.to_csv('../data/summary_statistics.csv', index=False)"
+    "summary_statistics_df.to_csv('../data/summary_statistics.csv')"
    ]
   },
   {
@@ -673,7 +673,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13530/2107521109.py:2: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "/tmp/ipykernel_2653/2107521109.py:2: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-whitegrid')\n"
      ]
     },
@@ -943,7 +943,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "percentiles1_transposed.to_csv('../data/percentiles1.csv', index=False)"
+    "percentiles1_transposed.to_csv('../data/percentiles1.csv')"
    ]
   },
   {
@@ -1022,7 +1022,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13530/147342671.py:2: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "/tmp/ipykernel_2653/147342671.py:2: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-whitegrid')\n"
      ]
     },
@@ -1292,7 +1292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "percentiles2_transposed.to_csv('../data/percentiles2.csv', index=False)"
+    "percentiles2_transposed.to_csv('../data/percentiles2.csv')"
    ]
   },
   {
@@ -1371,7 +1371,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13530/3994307003.py:2: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "/tmp/ipykernel_2653/3994307003.py:2: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-whitegrid')\n"
      ]
     },
@@ -1648,7 +1648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "percentiles3_transposed.to_csv('../data/percentiles3.csv', index=False)"
+    "percentiles3_transposed.to_csv('../data/percentiles3.csv')"
    ]
   },
   {
@@ -2068,7 +2068,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix1.to_csv('../data/matrix1.csv', index=False)"
+    "matrix1.to_csv('../data/matrix1.csv')"
    ]
   },
   {
@@ -2205,7 +2205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "significance_matrix1.to_csv('../data/significance_matrix1.csv', index=False)"
+    "significance_matrix1.to_csv('../data/significance_matrix1.csv')"
    ]
   },
   {
@@ -2342,7 +2342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pvalue_matrix1.to_csv('../data/pvalue_matrix1.csv', index=False)"
+    "pvalue_matrix1.to_csv('../data/pvalue_matrix1.csv')"
    ]
   },
   {
@@ -2561,7 +2561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix2.to_csv('../data/matrix2.csv', index=False)"
+    "matrix2.to_csv('../data/matrix2.csv')"
    ]
   },
   {
@@ -2714,7 +2714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "significance_matrix2.to_csv('../data/significance_matrix2.csv', index=False)"
+    "significance_matrix2.to_csv('../data/significance_matrix2.csv')"
    ]
   },
   {
@@ -2867,7 +2867,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pvalue_matrix2.to_csv('../data/pvalue_matrix2.csv', index=False)"
+    "pvalue_matrix2.to_csv('../data/pvalue_matrix2.csv')"
    ]
   },
   {
@@ -3086,7 +3086,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix3.to_csv('../data/matrix3.csv', index=False)"
+    "matrix3.to_csv('../data/matrix3.csv')"
    ]
   },
   {
@@ -3239,7 +3239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "significance_matrix3.to_csv('../data/significance_matrix3.csv', index=False)"
+    "significance_matrix3.to_csv('../data/significance_matrix3.csv')"
    ]
   },
   {
@@ -3392,7 +3392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pvalue_matrix3.to_csv('../data/pvalue_matrix3.csv', index=False)"
+    "pvalue_matrix3.to_csv('../data/pvalue_matrix3.csv')"
    ]
   },
   {
