--- a/notebooks/produce_regressions.ipynb
+++ b/notebooks/produce_regressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "Index(['tract', 'total_tract_population'], dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "\n",
     "\n",
     "data = pd.read_csv(\n",
-    "    \"../data/acs_data_all.csv\", dtype=dtype_dict\n",
+    "    \"../data/acs_data_all_test.csv\", dtype=dtype_dict\n",
     ")  # Replace with the path to your data file\n",
     "\n",
     "# Merge tract_pop to data\n",
@@ -141,7 +141,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tract</th>\n",
+       "      <th>Share of White Population</th>\n",
+       "      <th>Share of Asian Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27001770100</td>\n",
+       "      <td>0.935268</td>\n",
+       "      <td>0.007589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27001770200</td>\n",
+       "      <td>0.899737</td>\n",
+       "      <td>0.001751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>27001770300</td>\n",
+       "      <td>0.933104</td>\n",
+       "      <td>0.003732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27001770400</td>\n",
+       "      <td>0.919192</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27001790501</td>\n",
+       "      <td>0.977953</td>\n",
+       "      <td>0.007349</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         tract  Share of White Population  Share of Asian Population\n",
+       "0  27001770100                   0.935268                   0.007589\n",
+       "1  27001770200                   0.899737                   0.001751\n",
+       "2  27001770300                   0.933104                   0.003732\n",
+       "3  27001770400                   0.919192                   0.000000\n",
+       "4  27001790501                   0.977953                   0.007349"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[[\"tract\",\"Share of White Population\", \"Share of Asian Population\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -176,9 +260,9 @@
        "      <th>Educational Attainment</th>\n",
        "      <th>Share Employed</th>\n",
        "      <th>...</th>\n",
+       "      <th>Share of Other Race Population</th>\n",
        "      <th>Share of Hispanic/Latino Population</th>\n",
        "      <th>Population Density</th>\n",
-       "      <th>Share of White Population State</th>\n",
        "      <th>Share of Black Population State</th>\n",
        "      <th>Share of American Indian/Alaska Native Population State</th>\n",
        "      <th>Share of Asian Population State</th>\n",
@@ -202,14 +286,14 @@
        "      <td>0.142012</td>\n",
        "      <td>0.455980</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.011161</td>\n",
        "      <td>0.020089</td>\n",
        "      <td>0.000218</td>\n",
-       "      <td>0.000377</td>\n",
-       "      <td>2.696204e-06</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>3.055698e-06</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>0.000008</td>\n",
+       "      <td>0.000043</td>\n",
+       "      <td>0.000821</td>\n",
+       "      <td>0.000063</td>\n",
+       "      <td>0.000165</td>\n",
+       "      <td>0.000150</td>\n",
        "      <td>2240.0</td>\n",
        "      <td>0.000404</td>\n",
        "    </tr>\n",
@@ -226,14 +310,14 @@
        "      <td>0.084266</td>\n",
        "      <td>0.442195</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.046410</td>\n",
        "      <td>0.008757</td>\n",
        "      <td>0.000226</td>\n",
-       "      <td>0.000369</td>\n",
-       "      <td>1.258228e-06</td>\n",
-       "      <td>0.000017</td>\n",
-       "      <td>7.189876e-07</td>\n",
-       "      <td>0.000019</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>0.000020</td>\n",
+       "      <td>0.001756</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>0.000702</td>\n",
+       "      <td>0.000067</td>\n",
        "      <td>2284.0</td>\n",
        "      <td>0.000411</td>\n",
        "    </tr>\n",
@@ -250,14 +334,14 @@
        "      <td>0.155082</td>\n",
        "      <td>0.498758</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.023256</td>\n",
        "      <td>0.020672</td>\n",
        "      <td>0.004462</td>\n",
-       "      <td>0.000584</td>\n",
-       "      <td>5.032914e-06</td>\n",
-       "      <td>0.000007</td>\n",
-       "      <td>2.336710e-06</td>\n",
-       "      <td>0.000015</td>\n",
-       "      <td>0.000013</td>\n",
+       "      <td>0.000080</td>\n",
+       "      <td>0.000744</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.000536</td>\n",
+       "      <td>0.000240</td>\n",
        "      <td>3483.0</td>\n",
        "      <td>0.000627</td>\n",
        "    </tr>\n",
@@ -274,14 +358,14 @@
        "      <td>0.121503</td>\n",
        "      <td>0.485145</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.015488</td>\n",
        "      <td>0.013468</td>\n",
        "      <td>0.000295</td>\n",
-       "      <td>0.000491</td>\n",
-       "      <td>2.696204e-06</td>\n",
-       "      <td>0.000025</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>0.000007</td>\n",
+       "      <td>0.000043</td>\n",
+       "      <td>0.002652</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000304</td>\n",
+       "      <td>0.000134</td>\n",
        "      <td>2970.0</td>\n",
        "      <td>0.000535</td>\n",
        "    </tr>\n",
@@ -298,20 +382,20 @@
        "      <td>0.087353</td>\n",
        "      <td>0.438879</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.007349</td>\n",
        "      <td>0.005249</td>\n",
        "      <td>0.000295</td>\n",
-       "      <td>0.000335</td>\n",
-       "      <td>7.189876e-07</td>\n",
+       "      <td>0.000011</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>2.516457e-06</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>0.000052</td>\n",
+       "      <td>0.000093</td>\n",
+       "      <td>0.000033</td>\n",
        "      <td>1905.0</td>\n",
        "      <td>0.000343</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 29 columns</p>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -336,47 +420,47 @@
        "3                   4.8708      0.4339                0.121503   \n",
        "4                   5.0110      0.4564                0.087353   \n",
        "\n",
-       "   Share Employed  ...  Share of Hispanic/Latino Population  \\\n",
-       "0        0.455980  ...                             0.020089   \n",
-       "1        0.442195  ...                             0.008757   \n",
-       "2        0.498758  ...                             0.020672   \n",
-       "3        0.485145  ...                             0.013468   \n",
-       "4        0.438879  ...                             0.005249   \n",
+       "   Share Employed  ...  Share of Other Race Population  \\\n",
+       "0        0.455980  ...                        0.011161   \n",
+       "1        0.442195  ...                        0.046410   \n",
+       "2        0.498758  ...                        0.023256   \n",
+       "3        0.485145  ...                        0.015488   \n",
+       "4        0.438879  ...                        0.007349   \n",
        "\n",
-       "   Population Density  Share of White Population State  \\\n",
-       "0            0.000218                         0.000377   \n",
-       "1            0.000226                         0.000369   \n",
-       "2            0.004462                         0.000584   \n",
-       "3            0.000295                         0.000491   \n",
-       "4            0.000295                         0.000335   \n",
+       "   Share of Hispanic/Latino Population  Population Density  \\\n",
+       "0                             0.020089            0.000218   \n",
+       "1                             0.008757            0.000226   \n",
+       "2                             0.020672            0.004462   \n",
+       "3                             0.013468            0.000295   \n",
+       "4                             0.005249            0.000295   \n",
        "\n",
        "   Share of Black Population State  \\\n",
-       "0                     2.696204e-06   \n",
-       "1                     1.258228e-06   \n",
-       "2                     5.032914e-06   \n",
-       "3                     2.696204e-06   \n",
-       "4                     7.189876e-07   \n",
+       "0                         0.000043   \n",
+       "1                         0.000020   \n",
+       "2                         0.000080   \n",
+       "3                         0.000043   \n",
+       "4                         0.000011   \n",
        "\n",
        "   Share of American Indian/Alaska Native Population State  \\\n",
-       "0                                           0.000008         \n",
-       "1                                           0.000017         \n",
-       "2                                           0.000007         \n",
-       "3                                           0.000025         \n",
+       "0                                           0.000821         \n",
+       "1                                           0.001756         \n",
+       "2                                           0.000744         \n",
+       "3                                           0.002652         \n",
        "4                                           0.000000         \n",
        "\n",
        "   Share of Asian Population State  Share of Other Race Population State  \\\n",
-       "0                     3.055698e-06                              0.000004   \n",
-       "1                     7.189876e-07                              0.000019   \n",
-       "2                     2.336710e-06                              0.000015   \n",
-       "3                     0.000000e+00                              0.000008   \n",
-       "4                     2.516457e-06                              0.000003   \n",
+       "0                         0.000063                              0.000165   \n",
+       "1                         0.000015                              0.000702   \n",
+       "2                         0.000048                              0.000536   \n",
+       "3                         0.000000                              0.000304   \n",
+       "4                         0.000052                              0.000093   \n",
        "\n",
        "   Share of Hispanic/Latino Population State  total_tract_population  \\\n",
-       "0                                   0.000008                  2240.0   \n",
-       "1                                   0.000004                  2284.0   \n",
-       "2                                   0.000013                  3483.0   \n",
-       "3                                   0.000007                  2970.0   \n",
-       "4                                   0.000002                  1905.0   \n",
+       "0                                   0.000150                  2240.0   \n",
+       "1                                   0.000067                  2284.0   \n",
+       "2                                   0.000240                  3483.0   \n",
+       "3                                   0.000134                  2970.0   \n",
+       "4                                   0.000033                  1905.0   \n",
        "\n",
        "   tract_weight  \n",
        "0      0.000404  \n",
@@ -385,10 +469,10 @@
        "3      0.000535  \n",
        "4      0.000343  \n",
        "\n",
-       "[5 rows x 29 columns]"
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +958,7 @@
        "RMSE                                                0.282839   0.282829  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1435,7 @@
        "RMSE                                                0.094873   0.092863  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1912,7 @@
        "RMSE                                                 40.791577    40.590866  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
